--- a/styles.css
+++ b/styles.css
@@ -51,24 +51,27 @@ img{
     height: 100%;
     border-radius: 50%;
 }
-.profile h1{
+.profile h2{
     color: #fff;
     margin-top: 0.8em;
+    /* font-size: 26px; */
     font-weight: 600;
     text-align: center;
     line-height: 1.2em;
 }
-.profile h1 span{
-    font-size: 0.8em;
+.profile h2 span{
+    font-size: 0.79em;
+    letter-spacing: 1px;
     font-weight: 300;
 }
 
 
 .contactInfo{
-    padding: 35px 0px 0px 10px;
+    padding: 38px 0px 0px 10px;
 }
 .contactInfo .title{
     color: #fff;
+    /* font-size: 20px; */
     letter-spacing: 1px;
     padding-bottom: 15px;
 }
@@ -88,14 +91,17 @@ img{
 } 
 .contactInfo ul li span{
     color: #fff;
-    font-weight: 100;           /**/
+    font-weight: 200;           /**/
 }
 
 
 .education{
-    padding: 24px 0px 0px 11px;
+    padding: 30px 0px 0px 11px;
     color: #fff;
 }
+/* .education .title{
+    font-size: 20px;
+} */
 .education ul{
     margin-top: 16px;
 }
@@ -105,6 +111,7 @@ img{
 }
 .education ul li span{
     font-size: 16px;
+    /* font-weight: -200; */
 }
 .education ul .year{
     color: #03a9f4;
@@ -113,15 +120,21 @@ img{
 
 
 .language{
-    padding: 22px 0px 0px 11px;
+    padding: 26px 0px 0px 11px;
     color: #fff;
 }
+/* .language .title{
+    font-size: 20px;
+} */
 .language ul{
     margin-top: 16px;
 }
 .language ul li{
     list-style: none;
     margin: 8px 0px;
+}
+.language ul li h4{
+    font-weight: 200;
 }
 progress{
     width: 16em;
@@ -136,13 +149,14 @@ progress{
     padding: 40px;
 }
 
-.about h2{
+.about h3{
+    font-size: 20px;
     color: #013852;
     margin-bottom: 14px;
 }
 .about p{
     /* text-justify: inter-word; */
-    font-size: 1.2em;
+    font-size: 1.05em;
     letter-spacing: 0.06em;
     line-height: 1.3em;
 }
@@ -152,6 +166,7 @@ progress{
     margin-top: 40px;
 }
 .experience .title{
+    font-size: 20px;
     color: #013852;
 }
 .box{
@@ -162,7 +177,8 @@ progress{
 .year_post{                     /* same */
     min-width: 150px;
 }
-.year_post h2{
+.year_post .name{
+    color: #03a9f4;
     font-weight: 400;
 }
 .year_post h3{
@@ -172,23 +188,43 @@ progress{
     color: #848c90;
     font-weight: 400;
 }
-/* .year_post li p{
-    margin-top: 5px;
-    letter-spacing: 2em;
-} */
 .year_post p{
     margin-top: 8px;
     letter-spacing: 0.06em;
     line-height: 1.2em;
-    font-size: 1.2em;
+    font-size: 1.05em;
+}
+
+
+.projects{
+    margin-top: 40px;
+}
+.projects .title{
+    font-size: 20px;
+    color: #013852;
+}
+.projects div{
+    margin-top: 17px;
+}
+.projects div h3{
+    color: #03a9f4;
+    font-weight: 400;
+}
+.projects p{
+    margin-top: 5px;
+    font-size: 1.05em;
+    letter-spacing: 0.06em;
+    line-height: 1.3em;
 }
 
 
 .skills{
     margin-top: 40px;
 }
-.skills h2{
+.skills .title{
+    font-size: 20px;
     color: #013852;
+    font-weight: 600;
 }
 .post{
     color: #079ce0;
@@ -211,41 +247,13 @@ progress{
     width: 24em;
 }
 
-/*
-.skills .box{
-    position: relative;
-    width: 100%;
-    display: grid;
-    frid-template-columns:150px 1fr;
-    justify-content: center;
-    align-items: center;
-}
-
-.skills .box h4{
-    colot: #
-    fon
-}
-
-.skills .box h4 .percent{
-    position: relative;
-    width: 100%;
-    height: 10px;
-    background: #f0f0f0;
-}
-.skills .box h4 .percent div{
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    backgournd: #079ce0;
-}
-*/
 
 
 .hobbies{
     margin-top: 40px;
 }
-.hobbies h2{
+.hobbies h3{
+    font-size: 20px;
     color: #013852;
 }
 .fa{
@@ -259,6 +267,9 @@ progress{
 }
 .hobbies ul li{
     list-style: none;
+}
+.hobbies ul li span{
+    font-size: 20px;
 }
 .hobbies .fa{
     width: 20px;
